--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/jasny-bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap-table.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -33,21 +34,21 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">People <b class="caret"></b></a>
               <ul class="dropdown-menu navmenu-nav" role="menu">
-                <li><a href="#">All People</a></li>
+                <li><a href="#" class="menu-item">All People</a></li>
               </ul>
             </li>
           </ul>
 
           <ul class="nav navmenu-nav">
-            <li class="active"><a href="#">Settings</a></li>
-            <li><a href="#">Logout</a></li>
+            <li><a href="#" class="menu-item">Settings</a></li>
+            <li><a href="#" class="menu-item">Logout</a></li>
           </ul>
         </nav>
 
         <!-- Container for main content -->
         <div class="main">
-          <h1 class="page-header">Dashboard</h1>
-
+          <h1 class="page-header">All people</h1>
+          <table id="table"></table>
         </div>
 
       </div>
@@ -58,5 +59,7 @@
     <script src="js/jquery-1.11.3.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/jasny-bootstrap.js"></script>
+    <script src="js/bootstrap-table-all.js"></script>
+    <script src="js/custom.js"></script>
   </body>
 </html>
