--- a/index.html
+++ b/index.html
@@ -27,22 +27,18 @@
       <div class="row">
 
         <!-- Sidebar for module navigation -->
-        <nav class="navmenu navmenu-default navmenu-fixed-left" role="navigation">
+        <nav class="navmenu navmenu-default navmenu-fixed-left" id="sidebar" role="navigation">
           <a class="navmenu-brand" href="#">EYP Member Database</a>
 
-          <ul class="nav navmenu-nav">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">People <b class="caret"></b></a>
-              <ul class="dropdown-menu navmenu-nav" role="menu">
-                <li><a href="#" class="menu-item">All People</a></li>
-              </ul>
-            </li>
+          <ul id="sidebar-main-menu" class="nav navmenu-nav">
+
           </ul>
 
           <ul class="nav navmenu-nav">
             <li><a href="#" class="menu-item">Settings</a></li>
             <li><a href="#" class="menu-item">Logout</a></li>
           </ul>
+
         </nav>
 
         <!-- Container for main content -->
