Menus and views are now loaded dynamically. Implemented table view as a proof of concept.

--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
         </nav>
 
         <!-- Container for main content -->
-        <div class="main">
-          <h1 class="page-header">All people</h1>
-          <table id="table"></table>
+        <div id="main">
+          
         </div>
 
       </div>
