--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
 
     <!-- JS includes -->
-    <script src="js/jquery-1.11.3.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/jasny-bootstrap.js"></script>
-    <script src="js/bootstrap-table-all.js"></script>
+    <script src="js/frameworks/jquery-1.11.3.js"></script>
+    <script src="js/frameworks/bootstrap.js"></script>
+    <script src="js/frameworks/jasny-bootstrap.js"></script>
+    <script src="js/frameworks/bootstrap-table-all.js"></script>
     <script src="js/custom.js"></script>
   </body>
 </html>
