Split up JS files to make them more structured

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
     <script src="js/frameworks/bootstrap.js"></script>
     <script src="js/frameworks/jasny-bootstrap.js"></script>
     <script src="js/frameworks/bootstrap-table-all.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="js/custom/App.js"></script>
+    <script src="js/custom/Formatters.js"></script>
+    <script src="js/custom/Helpers.js"></script>
+    <script src="js/custom/Navigation.js"></script>
+    <script src="js/custom/Stores.js"></script>
+    <script src="js/custom/UI.js"></script>
+    <script src="js/custom/UIComponents.js"></script>
   </body>
 </html>
