MD-16: Added dialog view and remove dialogs

--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
 
                 </div>
 
+                <!-- Container for modals -->
+                <div class="modal fade" id="modalContainer" tabindex="-1" role="dialog">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content" id='modal'></div>
+                    </div>
+                </div>
+
                 <!-- Container for main content -->
                 <div id="main">
                 
