MD-20: Moved settings to a normal module, updated installer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                 <!-- Sidebar for module navigation -->
                 <nav class="navmenu navmenu-default navmenu-fixed-left" id="sidebar" role="navigation">
-                    <a class="navmenu-brand" href="#">EYP Member Database</a>
+                    <a id='app-title' class="navmenu-brand" href="#"></a>
 
                     <ul id="sidebar-main-menu" class="nav navmenu-nav">
 
