MD-15: Added installation wizard

--- a/index.html
+++ b/index.html
@@ -69,5 +69,6 @@
         <script src="js/custom/Stores.js"></script>
         <script src="js/custom/UI.js"></script>
         <script src="js/custom/UIComponents.js"></script>
+        <script src="js/custom/Installer.js"></script>
     </body>
 </html>
