MD-22: Fixed login and installer cooperation

--- a/index.html
+++ b/index.html
@@ -70,5 +70,6 @@
         <script src="js/custom/UI.js"></script>
         <script src="js/custom/UIComponents.js"></script>
         <script src="js/custom/Installer.js"></script>
+        <script src="js/custom/Server.js"></script>
     </body>
 </html>
