MD-24: Cleaned up and documented backend code

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <script src="js/frameworks/bootstrap.js"></script>
         <script src="js/frameworks/jasny-bootstrap.js"></script>
         <script src="js/frameworks/bootstrap-table-all.js"></script>
+        <script src="js/custom/Constants.js"></script>
         <script src="js/custom/App.js"></script>
         <script src="js/custom/Formatters.js"></script>
         <script src="js/custom/Helpers.js"></script>
