--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </head>
     <body>
 
-        <div id="navbar" class="navbar navbar-default navbar-fixed-top">
+        <div id="navbar" class="navbar navbar-inverse navbar-fixed-top">
             <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".navmenu">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
