MD-29: Added header buttons, improved mobile sidebar

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
 
         <!-- Sidebar for module navigation -->
-        <nav class="navmenu navmenu-default navmenu-fixed-left offcanvas-xs" id="sidebar" role="navigation">
+        <nav class="navmenu navmenu-default navmenu-fixed-left offcanvas-xs" id="sidebar" data-canvas="#main" role="navigation">
             <ul id="sidebar-main-menu" class="nav navmenu-nav"></ul>
         </nav>
 
