--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link href="css/bootstrap.css" rel="stylesheet">
         <link href="css/jasny-bootstrap.css" rel="stylesheet">
         <link href="css/bootstrap-table.css" rel="stylesheet">
+        <link href="css/bootstrap-select.css" rel="stylesheet">
         <link href="css/custom.css" rel="stylesheet">
     
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -60,6 +61,7 @@
         <script src="js/frameworks/bootstrap.js"></script>
         <script src="js/frameworks/jasny-bootstrap.js"></script>
         <script src="js/frameworks/bootstrap-table-all.js"></script>
+        <script src="js/frameworks/bootstrap-select.js"></script>
         <script src="js/custom/Constants.js"></script>
         <script src="js/custom/App.js"></script>
         <script src="js/custom/Formatters.js"></script>
