--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+
             <a id='app-title' class="navbar-brand" href="#"></a>
+            <a href="#">
+                <img src="img/eyp_logo_white.png" alt="EYP Logo" height="30px" id="eyp-logo" />
+            </a>
+
             <ul id="user-menu" class="nav navbar-nav navbar-right"></ul>
         </div>
 
