--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
                 <span class="icon-bar"></span>
             </button>
 
-            <a id='app-title' class="navbar-brand" href="#"></a>
             <a href="#">
-                <img src="img/eyp_logo_white.png" alt="EYP Logo" height="30px" id="eyp-logo" />
+                <div id="eyp-logo">
+                    <img src="img/eyp_logo_white.png" alt="EYP Logo" height="34px" />
+                </div>
             </a>
 
             <ul id="user-menu" class="nav navbar-nav navbar-right"></ul>
