--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link href="css/jasny-bootstrap.css" rel="stylesheet">
         <link href="css/bootstrap-table.css" rel="stylesheet">
         <link href="css/bootstrap-select.css" rel="stylesheet">
+        <link href="css/bootstrap-datepicker3.standalone.css" rel="stylesheet">
         <link href="css/custom.css" rel="stylesheet">
     
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -69,6 +70,7 @@
         <script src="js/frameworks/bootstrap-table.js"></script>
         <script src="js/frameworks/bootstrap-table-filter-control.js"></script>
         <script src="js/frameworks/bootstrap-select.js"></script>
+        <script src="js/frameworks/bootstrap-datepicker.js"></script>
         <script src="js/custom/Constants.js"></script>
         <script src="js/custom/App.js"></script>
         <script src="js/custom/Formatters.js"></script>
