Cleaned up css and js files

--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
         </div>
 
 
-        <!-- JS includes -->
-        <script src="js/frameworks/jquery-1.11.3.js"></script>
-        <script src="js/frameworks/bootstrap.js"></script>
-        <script src="js/frameworks/jasny-bootstrap.js"></script>
-        <script src="js/frameworks/bootstrap-table.js"></script>
-        <script src="js/frameworks/bootstrap-table-filter-control.js"></script>
-        <script src="js/frameworks/bootstrap-select.js"></script>
-        <script src="js/frameworks/bootstrap-datepicker.js"></script>
+        <!-- BEGIN: JS --> 
+        <script src="js/frameworks/01-jquery-1.11.3.js"></script>
+        <script src="js/frameworks/02-bootstrap.js"></script>
+        <script src="js/frameworks/03-jasny-bootstrap.js"></script>
+        <script src="js/frameworks/04-bootstrap-table.js"></script>
+        <script src="js/frameworks/05-bootstrap-table-filter-control.js"></script>
+        <script src="js/frameworks/06-bootstrap-select.js"></script>
+        <script src="js/frameworks/07-bootstrap-datepicker.js"></script>
         <script src="js/custom/Constants.js"></script>
         <script src="js/custom/App.js"></script>
         <script src="js/custom/Formatters.js"></script>
@@ -81,5 +81,6 @@
         <script src="js/custom/UIComponents.js"></script>
         <script src="js/custom/Installer.js"></script>
         <script src="js/custom/Server.js"></script>
+        <!-- END: JS -->
     </body>
 </html>
