--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 
         <title>EYP Member Database</title>
 
-        <!-- CSS -->
-        <link href="css/bootstrap.css" rel="stylesheet">
-        <link href="css/jasny-bootstrap.css" rel="stylesheet">
-        <link href="css/bootstrap-table.css" rel="stylesheet">
-        <link href="css/bootstrap-select.css" rel="stylesheet">
-        <link href="css/bootstrap-datepicker3.standalone.css" rel="stylesheet">
-        <link href="css/custom.css" rel="stylesheet">
+        <!-- BEGIN: CSS -->
+        <link href="css/01-bootstrap.css" rel="stylesheet">
+        <link href="css/02-jasny-bootstrap.css" rel="stylesheet">
+        <link href="css/03-bootstrap-table.css" rel="stylesheet">
+        <link href="css/04-bootstrap-select.css" rel="stylesheet">
+        <link href="css/05-bootstrap-datepicker3.standalone.css" rel="stylesheet">
+        <link href="css/06-custom.css" rel="stylesheet">
+        <!-- END: CSS -->
     
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -61,7 +62,6 @@
         <div id="main" class="container-fluid">
         
         </div>
-
 
         <!-- BEGIN: JS --> 
         <script src="js/frameworks/01-jquery-1.11.3.js"></script>
